src/calendar/snapshots/protonctl__calendar__tests__get_event_moved.snap
---
source: src/calendar/mod.rs
expression: "found[\"event\"]"
---
{
  "allDay": false,
  "calendarId": "c",
  "end": "2026-10-19T13:30:00-07:00",
  "eventId": "weekly@x.test|20261019T160000Z",
  "recurring": true,
  "showsAs": "busy",
  "start": "2026-10-19T13:00:00-07:00",
  "status": "confirmed",
  "summary": "Standup (moved)"
}
