src/calendar/snapshots/protonctl__calendar__tests__get_event_occurrence.snap
---
source: src/calendar/mod.rs
expression: "found[\"event\"]"
---
{
  "allDay": false,
  "calendarId": "c",
  "end": "2026-10-12T09:30:00-07:00",
  "eventId": "weekly@x.test|20261012T160000Z",
  "recurring": true,
  "showsAs": "busy",
  "start": "2026-10-12T09:00:00-07:00",
  "status": "confirmed",
  "summary": "Standup"
}
