src/calendar/snapshots/protonctl__calendar__tests__get_event_single.snap
---
source: src/calendar/mod.rs
expression: "found[\"event\"]"
---
{
  "allDay": false,
  "calendarId": "c",
  "end": "2026-10-05T11:00:00-07:00",
  "eventId": "single@x.test",
  "location": "Main St",
  "recurring": false,
  "showsAs": "busy",
  "start": "2026-10-05T10:00:00-07:00",
  "status": "confirmed",
  "summary": "Dentist"
}
